# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
advent_of_code/: __init__.py  __main__.py  constants.py  solutions.py  solutions.yaml
advent_of_code/meta/: __init__.py  aoc_website.py  daily_files.py
advent_of_code/meta/template/: main.py  part.sql
advent_of_code/solutions/: __init__.py  solutions.schema.json  solutions.yaml
advent_of_code/solutions/utils/: geometry.py
advent_of_code/solutions/year_2022/: __init__.py
advent_of_code/solutions/year_2022/day_01/: main.py
advent_of_code/solutions/year_2022/day_02/: main.py
advent_of_code/solutions/year_2022/day_03/: main.py
advent_of_code/solutions/year_2022/day_04/: main.py
advent_of_code/solutions/year_2022/day_05/: main.py
advent_of_code/solutions/year_2022/day_06/: main.py
advent_of_code/solutions/year_2022/day_07/: main.py
advent_of_code/solutions/year_2022/day_08/: main.py
advent_of_code/solutions/year_2022/day_09/: main.py
advent_of_code/solutions/year_2022/day_10/: main.py
advent_of_code/solutions/year_2022/day_11/: main.py
advent_of_code/solutions/year_2022/day_12/: main.py
advent_of_code/solutions/year_2022/day_13/: main.py
advent_of_code/solutions/year_2022/day_14/: main.py
advent_of_code/solutions/year_2023/: __init__.py
advent_of_code/solutions/year_2024/: __init__.py
advent_of_code/utils/: daily_files.py
advent_of_code/year_2022/day_01/: main.py
advent_of_code/year_2022/day_02/: constants.py  main.py
advent_of_code/year_2022/day_03/: constants.py  main.py
advent_of_code/year_2022/day_04/: main.py
advent_of_code/year_2022/day_05/: main.py
advent_of_code/year_2022/day_06/: main.py
advent_of_code/year_2022/day_07/: main.py
advent_of_code/year_2022/day_08/: main.py  utils.py
advent_of_code/year_2022/day_09/: main.py
advent_of_code/year_2022/day_10/: main.py
advent_of_code/year_2022/day_11/: main.py
advent_of_code/year_2022/day_12/: main.py
advent_of_code/year_2022/day_13/: main.py
advent_of_code/year_2022/day_14/: main.py
advent_of_code/year_2022/day_15/: main.py
advent_of_code/year_2022/day_16/: main.py
advent_of_code/year_2022/day_17/: main.py
advent_of_code/year_2023/day_01/: main.py
advent_of_code/year_2023/day_02/: main.py
advent_of_code/year_2023/day_03/: main.py
advent_of_code/year_2023/day_04/: main.py
advent_of_code/year_2023/day_05/: main.py
advent_of_code/year_2023/day_06/: main.py
advent_of_code/year_2023/day_22/: README.md
advent_of_code/year_2024/day_01/: README.md  __init__.py  __main__.py  main.py  part-1.sql  part-2.sql
tests/: test__solutions.py
tests/meta/: test__daily_files.py
tests/meta/fixtures/: mock_main.py  mock_part.sql
tests/solutions/: test__solutions.py
tests/utils/: test__daily_files.py
(+99 files in other folders)
