[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "advent_of_code"
version = "0.0.0"
description = "Solutions to the Advent of Code problem sets."
authors = ["Bilbottom"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.scripts]
aoc = "advent_of_code.__main__:arguably.run"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1"
arguably = "^1.3.0"

[tool.poetry.group]
dev.optional = true
test.optional = true
docs.optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-callouts = "^1.10.0"
markdown-callouts = "^0.3.0"

[tool.isort]
profile = "black"
