[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "advent_of_code"
version = "0.0.0"
description = "Solutions to the Advent of Code problem sets."
authors = ["Bilbottom"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.scripts]
aoc = "advent_of_code.__main__:arguably.run"

[tool.poetry.dependencies]
python = "^3.11"

arguably = "^1"
duckdb = "^1"
requests = "^2"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"

[tool.poetry.group]
dev.optional = true
test.optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"**/*.py" = [
    "N807",  # Function name should not start and end with `__`

    # TODO: Enable these rules
    "S101",     #  Use of `assert` detected
    "F401",     #  `...` imported but unused; consider removing, adding to `__all__`, or using a redundant alias
    "RUF012",   #  Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF015",   #  Prefer `next(...)` over single element slice
    "PLW0603",  #  Using the global statement to update `...` is discouraged
]
"tests/**/*.py" = [
    "S101",     #  Use of `assert` detected
    "PLR2004",  #  Magic value used in comparison
    "PLR0913",  #  Too many arguments in function definition
]
